[package]
name = "peaq-pallet-rbac"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
hex-literal = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"], default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }
log = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
	"sp-runtime/std",
    "sp-std/std",
	"sp-io/std",
    "sp-core/std",
	"pallet-timestamp/std",
    "log/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
