[package]
name = "peaq-pallet-rbac-rpc"
description = "peaq rbac rpc interface"
version = "0.0.2"
edition = "2021"
authors = ["peaq network <https://github.com/peaqnetwork>"]
homepage = "https://peaq.network/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/peaqnetwork/peaq-pallet-rbac/"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"

sp-std = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-blockchain = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
sp-runtime = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.38" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }

peaq-pallet-rbac-runtime-api = { path = "./runtime-api" } 
peaq-pallet-rbac = { path = "../pallet/" }
