[package]
name = "peaq-pallet-rbac-rpc"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"

sp-std = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-blockchain = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }

peaq-pallet-rbac-runtime-api = { path = "./runtime-api" } 
peaq-pallet-rbac = { path = "../pallet/" }
