[package]
name = "peaq-pallet-rbac-rpc"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }
jsonrpc-derive = { workspace = true }

sp-std = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }

peaq-pallet-rbac-runtime-api = { path = "./runtime-api" } 
peaq-pallet-rbac = { path = "../pallet/" }
