[package]
name = "peaq-pallet-rbac-runtime-api"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
sp-api = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
peaq-pallet-rbac = { path = "../../pallet", default-features = false }


[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
	"sp-api/std",
	"sp-std/std",
	"peaq-pallet-rbac/std",
]
